--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
 
 	<div id="mainpic">
-		<h1>Future of the Internet 2018</h1>
-		<h2><font color="#C0C0C0">Discussing the direction of a tool that will impact us all</font></h2>
-		<h3>Washington, District of Columbia</h3>
-		<h4><font color="#C0C0C0">June 28 and June 29, 2018</font></h4>
+		<h1><font color="white">Future of the Internet 2018</font></h1>
+		<h2><font color="white">Discussing the direction of a tool that will impact us all</font></h2>
+		<h3><font color="white">Washington, District of Columbia</font></h3>
+		<h4><font color="white">June 28 and June 29, 2018</font></h4>
 	</div>
 
 	<div class="container">
